# gaussian_process_tutorials

./: cokriging_1d.py  kriging_1d.m  readme.md  simple_gp.m  simple_mogp.m  simple_nsgp.m  test_func.m
cokriging/: cokriging_1d.m  get_gamma_models.m  get_model.m  nonlinear_constraints.m  variogram_cost_func.m
gp_cpp/: CMakeLists.txt  README.md  gp.cpp  plot_results.py  spgp.cpp
